Wed Jun 22 19:55:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread{.h .inl}:
          Oops, fixed some more wchar problems.

Wed Jun 22 19:16:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_sys_mman.inl:
        * ace/OS_NS_Thread{.h .inl .cpp}:
        * ace/INET_Addr.cpp:
        * ace/SOCK_Dgram_Mcast.cpp:
          Fixed wchar problems in arguments and variables.

        * ace/config-linux-common.h:
          Undef ACE_HAS_SHMOPEN after having included config-posix.h as
          there are some things to check out here before really using
          ::shm_open()!

Wed Jun 22 09:25:12 2005  Gary Maxey  <gary.maxey@hp.com>

        * ace/config-lite.h:
          Added __TANDEM platform to ACE_UNUSED_ARG macro

Wed Jun 22 12:24:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/config-posix.h:
          Added test to set new macro ACE_HAS_POSIX_SEM_TIMEOUT when supported.

        * ace/config-linux-common.h:
          Added include for config-posix.h to test for more supported POSIX
          functionality.
          Added special test for Linux kernels < 2.6 because these falsely
          report certain POSIX support while not having that in reality
          (f.i. ACE_HAS_POSIX_SEM with ACE_HAS_POSIX_SEM_TIMEOUT).

        * ace/config-lite.h:
          Added test to undef (new) macro ACE_USES_FIFO_SEM (see below) when
          other macro settings invalidate this one.

        * ace/os_include/os_pthread.h:
          Extended test to prevent definition of ACE_sema_t when ACE_USES_FIFO_SEM
          is defined.

        * ace/OS_NS_Thread{.h .inl .cpp}:
          Added new implementation of ACE_OS::sema_XXX methods based on FIFOs
          (derived from W. Richard Stevens, UNIX Network Programming V2)
          active when !ACE_HAS_POSIX_SEM && ACE_USES_FIFO_SEM.
          Offshoot of customer request for process shareable solution for Linux
          2.4.xx kernels.
