@@ -2529,7 +2529,13 @@ void
 ACE_Log_Msg::msg_ostream (ACE_OSTREAM_TYPE *m, int delete_ostream)
 {
   if (this->delete_ostream_)
-    delete this->ostream_;
+    {
+#if defined (ACE_LACKS_IOSTREAM_TOTALLY)
+      ACE_OS::fclose (this->ostream_);
+#else
+      delete this->ostream_;
+#endif
+    }
 
   this->delete_ostream_ = delete_ostream;
   this->ostream_ = m;
